# SolarSystemGL

./: CMakeLists.txt  README.md  main.cpp  sul
docs/: solar_system.webm
